<resources>
    <string name="app_name">综合服务排队取号机</string>
    <string name="verhicle_yw">机动车业务</string>
    <string name="verhicle_man_yw">驾驶人业务</string>
    <string name="next_page">下一页</string>
    <string name="last_page">上一页</string>
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="back_four">返回前页</string>
    <string name="sure">确定</string>
    <string name="use_introduce">使用说明</string>
    <string name="pick_num_first">去取号</string>
    <string name="clear_all">清除所有</string>
    <string name="use_introduce_first">①选择您要办理的业务类别（机动车、驾驶人业务）</string>
    <string name="use_introduce_second">②点击您要办理的业务（如多笔业务，点击相应业务添加笔数），点击右上角移除按钮，进行取消或者就减少业务笔数操作。</string>
    <string name="vip_pass">绿色通道</string>
    <string name="pick_num">普通取号</string>
    <string name="error_title">服务器拒绝访问</string>
    <string name="close">关闭</string>
    <string name="again">重试</string>
    <string name="error_again">访问服务器失败，请重试！[-101]</string>
    <string name="empty_selected_tip">请选择您要办理的业务!</string>
    <string name="selected_title">选中</string>
    <!--版本更新-->
    <string name="tip_new_version">当前已经是最新版本！</string>
    <string name="tip_connect_net_content">无可用网络,请检查网络设置！</string>
    <string name="tip_error">错误提示</string>
    <string name="tip_version">当前软件版本:%1$s</string>
    <string name="tip_connect_error">访问超时，请稍后重新访问！</string>


    <!--测试print-->
    <string name="terminal">Terminal</string>

    <string name="Add_Path">Add path</string>
    <!-- CheckBox 打印位图功能选项-->
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="Extend">Extend</string>
    <string name="Simplify">Simplify</string>
    <string name="Simplify2">SimplifyII</string>

    <string name="Rotate">Rotate</string>
    <string name="Normal">Normal</string>
    <string name="Rotation_90degrees">Rotation 90D</string>

    <string name="Align_Mode">Align</string>
    <string name="Left">Left</string>
    <string name="Center">Center</string>
    <string name="Right">Right</string>

    <string name="UnderLine">UnderLine</string>
    <string name="Underline_1">Underline_1</string>
    <string name="Underline_2">Underline_2</string>
    <string name="Cancel">Cancel</string>

    <string name="Cutter">Cutter</string>
    <string name="Total">Total cut</string>
    <string name="Half">Half cut</string>

    <string name="System">System</string>
    <string name="ExitSystem">Exit</string>
    <string name="VersionSystem">Version</string>
    <string name="OpenBlackMark">Open BlackMark</string>
    <string name="CloseBlackMark">Close BlackMark</string>
    <string name="ContinuePrint">Continue Print</string>

    <string name="Htseat">Htseat</string>
    <string name="No_print">Not print</string>
    <string name="Above">Above</string>
    <string name="Below">Below</string>
    <string name="All">Above and below</string>

    <string name="Linespace">Linespace</string>
    <string name="line_30">30</string>
    <string name="line_40">40</string>
    <string name="line_50">50</string>
    <string name="line_60">60</string>
    <string name="line_70">70</string>

    <string name="InputPrint_btn">Input Print</string>
    <string name="Feedline_num_et">Please enter the line number,The default 4 lines</string>
    <string name="PrintSeflPage_btn">Print SeflPage</string>
    <string name="PrinterInfo_btn">Printer Info</string>
    <string name="PrintTest_btn">Print Text</string>
    <string name="PrintTicket_btn">Print ticket</string>
    <string name="Check_status_btn">Check status</string>
    <string name="Clear_btn">Clear</string>
    <string name="AddPath_btn">Add Path</string>
    <string name="ClearPath_btn">Clear Path</string>
    <string name="Load_Bmp_btn">Load bitmap</string>
    <string name="Print_Bmp_btn">Print bitmap</string>
    <string name="Print_Img_btn">Print Img</string>
    <string name="Print_Conver_Img_btn">Print Conver Img</string>
    <string name="Set_ADValue_btn">ADValue</string>
    <string name="Set_BlackMarkOffset_btn">BlackMarkOffset</string>
    <string name="Open_electronic_lock_btn">Electronic_lock</string>
    <string name="Print_density_btn">Print density</string>
    <string name="Set_BlackMark_btn">Set BlackMark</string>
    <string name="Uninit_BlackMark">Uninit BlackMark</string>
    <string name="Init_BlackMark">Init BlackMark</string>
    <string name="Feed_dot_btn">Feed Paper</string>
    <string name="Feed_back_btn">Feed Back</string>
    <string name="Half_cut_btn">Cut Half</string>
    <string name="Total_cut_btn">Cut Total</string>
    <string name="BlackMark_cut_btn">BlackMark Cut</string>
    <string name="Density_input_hint">Please enter the concentration value,Range:70~200</string>
    <string name="Feeddistance_input_hint">Please enter the paper distance(mm)</string>
    <string name="Set_Country">Set Country</string>
    <string name="Set_CodePage">Set CodePage</string>
    <string name="PrintCharPaperBtn">Print CharPaper</string>
    <string name="Bmp_path_et">Show the path of bmp file</string>
    <string name="Img_path_et">Show the path of img file</string>
    <string name="SelectBmpFile">BMP File</string>
    <string name="SelectImgFile">IMG File</string>
    <string name="PrintHorTable">Print Horizontal Tabulation</string>
    <string name="Print1DBar">Print 1DBar</string>
    <string name="PrintQrCode">Print QrCode</string>
    <string name="PrintPDF417">Print PDF417</string>
    <string name="Download_bmp_prompt">Download the bitmap successfully, please restart the printer!</string>
    <string name="The_path_cannot_be_empty">The picture path cannot be empty!</string>

    <string name="bmp_1">1</string>
    <string name="bmp_2">2</string>
    <string name="bmp_3">3</string>
    <string name="bmp_4">4</string>
    <string name="bmp_5">5</string>
    <string name="bmp_6">6</string>

    <string name="iFstype_1">1.Print head model ID</string>
    <string name="iFstype_2">2.Hardware version</string>
    <string name="iFstype_3">3.Firmware version</string>
    <!-- <string name="iFstype_4">4.Manufacturer's information</string> -->
    <!-- <string name="iFstype_5">5.Printer model</string> -->
    <!-- <string name="iFstype_6">6.Supported Chinese coding format</string> -->
    <string name="iFstype_4">4.Printer model</string>
    <string name="iFstype_5">5.Supported Chinese coding format</string>
    <string name="iFstype_6">6.nothing</string>

    <string name="Select_Print_Case">Select Print sample</string>
    <string name="case1">Queuing ticket</string>
    <string name="case2">Transaction receipt</string>
    <string name="case3">Share ticket</string>
    <string name="case4">Cinema ticket</string>
    <string name="case5">Sample 5</string>
    <string name="case6">Sample 6</string>

    <string name="Select_Device">Select Device</string>
    <string name="dev0">default</string>
    <string name="dev1">device1</string>
    <string name="dev2">device2</string>

    <string name="Title1_hint">Title 1</string>
    <string name="First_hint">First column</string>
    <string name="Title2_hint">Title 2</string>
    <string name="Second_hint">Second column</string>
    <string name="Three_hint">Three column</string>
    <string name="AD_Value">Scope: 32-128</string>

    <!-- <string name="Double_height_and_width">Double high wide</string>
    <string name="print_1D_code">Print 1D code</string>
    <string name="print_2D_code">Print 2D code</string>
    <string name="Inverse_mode">Inverse mode</string>
    <string name="Normal_mode">Normal mode</string>
    <string name="PrintInputContent">Print input content</string>
    <string name="SetUnderLine">Set underline</string>
    <string name="Get_status">Get status</string>
    <string name="CutPaper">CutPaper</string> -->

    <string name="USB_Driver_Success">USB driver success</string>
    <string name="USB_Driver_Failed">USB driver failed</string>
    <string name="PrintComplete">Print complete!</string>
    <string name="PrintException">Printer exception,please try again!</string>

    <!-- hint -->
    <string name="Print_code_content_hint">Please enter QRCode information!</string>
    <string name="Print_code_content_et">Welcome</string>
    <string name="Print_test_times_hint">Input test times</string>
    <!-- download success hint -->
    <string name="Download_bitmap_success">Download bitmap success!</string>
    <string name="Download_bitmap_failed">Download bitmap failed!</string>

    <string name="interval_time_et">Interval(ms):</string>
    <string name="execution_times_et">Execution times:</string>
    <string name="start_print_btn">Start print</string>
    <string name="input_interval_time_hint">Input interval time</string>
    <string name="input_execution_times_hint">Input execution times</string>
    <string name="default_interval_time">3000</string>
    <string name="default_execution_times">3</string>

    <string name="underline_nothing">无</string>
    <string name="underline_first">下划线1</string>
    <string name="underline_sencond">下划线2</string>
    <string name="D347QR">D347QrCode</string>
    <string name="D245QR">D245QrCode</string>
    <string name="T500IIQr">T500IIQrCode</string>
</resources>